--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h3>Users</h3>
+    <h3>User Roles</h3>
     <div class="column">
       <table class="table">
         <tbody>
